@startuml BookBus_Class_Diagram

' Styles
skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor<<Entity>> LightBlue
    BackgroundColor<<Service>> LightGreen
    BorderColor Black
    ArrowColor Black
}

' ===== CLASSES PRINCIPALES =====

class User <<Entity>> {
    - id: int
    - name: string
    - email: string
    - password: string
    - phone: string
    - role: string
    - created_at: datetime
    - updated_at: datetime
    --
    + register(): bool
    + login(): bool
    + updateProfile(): bool
    + getBookings(): array
    + isAdmin(): bool
}

class BusCompany <<Entity>> {
    - id: int
    - name: string
    - logo: string
    - phone: string
    - email: string
    - address: string
    - created_at: datetime
    - updated_at: datetime
    --
    + create(): bool
    + update(): bool
    + delete(): bool
    + getBuses(): array
    + getTrips(): array
}

class Route <<Entity>> {
    - id: int
    - departure_city: string
    - arrival_city: string
    - distance_km: float
    - duration_minutes: int
    - created_at: datetime
    - updated_at: datetime
    --
    + create(): bool
    + update(): bool
    + delete(): bool
    + getTrips(): array
    + calculatePrice(): float
}

class Bus <<Entity>> {
    - id: int
    - bus_company_id: int
    - registration_number: string
    - model: string
    - total_seats: int
    - seat_layout: string
    - amenities: array
    - created_at: datetime
    - updated_at: datetime
    --
    + create(): bool
    + update(): bool
    + delete(): bool
    + getAvailableSeats(trip_id): int
    + isAvailable(date): bool
}

class Trip <<Entity>> {
    - id: int
    - route_id: int
    - bus_id: int
    - departure_time: datetime
    - arrival_time: datetime
    - price: decimal
    - status: string
    - available_seats: int
    - created_at: datetime
    - updated_at: datetime
    --
    + create(): bool
    + update(): bool
    + cancel(): bool
    + getAvailableSeats(): int
    + updateAvailableSeats(): bool
    + isBookable(): bool
}

class Booking <<Entity>> {
    - id: int
    - user_id: int
    - trip_id: int
    - booking_reference: string
    - passenger_name: string
    - passenger_phone: string
    - number_of_seats: int
    - total_price: decimal
    - status: string
    - created_at: datetime
    - updated_at: datetime
    --
    + create(): bool
    + confirm(): bool
    + cancel(): bool
    + getSeats(): array
    + generateReference(): string
    + sendConfirmation(): bool
}

class Payment <<Entity>> {
    - id: int
    - booking_id: int
    - amount: decimal
    - payment_method: string
    - transaction_id: string
    - status: string
    - paid_at: datetime
    - created_at: datetime
    - updated_at: datetime
    --
    + process(): bool
    + verify(): bool
    + refund(): bool
    + generateReceipt(): string
}

class Seat <<Entity>> {
    - id: int
    - booking_id: int
    - seat_number: string
    - seat_type: string
    - created_at: datetime
    - updated_at: datetime
    --
    + reserve(): bool
    + release(): bool
    + isAvailable(): bool
}

' ===== RELATIONS =====

' User relations
User "1" -- "0..*" Booking : fait >

' BusCompany relations
BusCompany "1" -- "0..*" Bus : possède >

' Route relations
Route "1" -- "0..*" Trip : a >

' Bus relations
Bus "1" -- "0..*" Trip : effectue >

' Trip relations
Trip "1" -- "0..*" Booking : reçoit >

' Booking relations
Booking "1" -- "1" Payment : nécessite >
Booking "1" -- "1..*" Seat : contient >

' ===== NOTES =====

note right of User
  Rôles possibles:
  - client
  - admin
end note

note right of Trip
  Status possibles:
  - scheduled
  - in_progress
  - completed
  - cancelled
end note

note right of Booking
  Status possibles:
  - pending
  - confirmed
  - cancelled
  - completed
end note

note right of Payment
  Méthodes de paiement:
  - cash
  - card
  - mobile_money
end note

@enduml
